# gavmild

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.development  README.md  compose.core.yml  compose.dev.yml  compose.override.yml  compose.prod.yml  compose.yml  config.py  pyproject.toml  requirements.in  requirements.txt  run.py
.github/workflows/: deploy.yml  main.yml
app/: __init__.py  config.py  database.db  forms.py  models.py  utils.py
app/admin/: __init__.py  controllers.py  decorators.py  routes.py
app/auth/: __init__.py  controllers.py  decorators.py  models.py  routes.py
app/blueprints/api/: api.py
app/blueprints/auth/: auth.py  models.py  views.py
app/blueprints/bot/: __init__.py  bot.py  credentials.py  mastermind.py  routes.py
app/blueprints/telegram/: models.py
app/database/: database.py
app/telegram/: __init__.py  bot.py  controllers.py  models.py
app/templates/: change_pw.html  index.html  list_wishes copy.html  listing_js.html  search.html  update.html
app/webauthn/: __init__.py  controllers.py  models.py
app/wishlist/: __init__.py  api.py  controllers.py  image_generation.py  jobs.py  models.py  prisjakt.py
telegram/: Dockerfile
telegram/bot/: chat_api.py  run.py
tests/: conftest.py  test_admin_controllers.py  test_admin_routes.py  test_app.py  test_auth_controllers.py  test_auth_models.py  test_auth_routes.py  test_telegram_controllers.py  test_wishlist_controllers.py  test_wishlist_jobs.py  test_wishlist_models.py
webapp/: Dockerfile
webapp/app/: __init__.py  config.py  constants.py  forms.py
(+102 files in other folders)
